# ClawChat

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  RELEASE_SIGNING.md  THIRD_PARTY_NOTICES.md  eslint.config.js  install.sh  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: flutter-build.yml
assets/: LEGACY_OPENCLAW_SCREENSHOTS.md
docs/: privacy-policy.html
docs/migrations/: openclaw-to-clawchat.md
docs/plans/: 2026-07-15-v2.6-v2.8-agent-quality-results-background-plan.md
flutter_app/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml
flutter_app/android/: build.gradle
flutter_app/android/app/: build.gradle
flutter_app/android/app/src/main/cpp/: CMakeLists.txt  secure_import.cpp
flutter_app/android/verified-apk-jvm/: build.gradle  settings.gradle
flutter_app/lib/: app.dart  constants.dart  main.dart
flutter_app/lib/l10n/: app_strings.dart
flutter_app/lib/layout/: foldable_layout.dart
flutter_app/lib/models/: agent_run_center.dart  agent_state.dart  background_task.dart  chat_models.dart  (+10 more)
flutter_app/test/: documentation_governance_test.dart
lib/: bionic-bypass.js  index.js  installer.js  test.js
preview/c2a-governance/: index.html  tokens.css
release/: signing-identity.json
scripts/: build-apk.sh  fetch-proot-binaries.sh  test_verify_proot_packaging.py  test_verify_release_signer.py  verify-proot-packaging.py  verify-release-signer.py
(+320 files in other folders)
